response type edited + refactor