@@ -5,9 +5,11 @@ import com.mymerit.mymerit.domain.entity.User;
 import com.mymerit.mymerit.infrastructure.repository.UserRepository;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
 @Service
@@ -20,38 +22,56 @@ public class RankingService {
     }
 
     public List<RankingResponse> getWeeklyRanking() {
-
-        List<User> allUsers = userRepository.findAll();
-        List<RankingResponse> response = new ArrayList<>();
-
-
-        for (User user : allUsers) {
-            Integer weeklyRanking = user.getRanking().getWeeklyRanking();
-            RankingResponse rankingResponse = new RankingResponse(user, weeklyRanking);
-            response.add(rankingResponse);
-        }
-
-        response.sort(Comparator.comparingInt(RankingResponse::getRanking).reversed());
-
-        return  response.stream().limit(50).collect(Collectors.toList());
+        AtomicInteger rank = new AtomicInteger(1);
+        return userRepository.findAll().stream()
+                .sorted(Comparator.<User, Integer>comparing(
+                        user -> user.getRanking().getWeeklyRanking()).reversed())
+                .map(user -> new RankingResponse(
+                        user,
+                        user.getRanking().getWeeklyRanking(),
+                        rank.getAndIncrement()))
+                .limit(50)
+                .toList();
     }
-    public List<RankingResponse> getAllTimeRanking(){
-
-        List<User> allUsers = userRepository.findAll();
-        List<RankingResponse> response = new ArrayList<>();
 
 
-        for (User user : allUsers) {
-            Integer weeklyRanking = user.getRanking().getRanking();
-            RankingResponse rankingResponse = new RankingResponse(user, weeklyRanking);
-            response.add(rankingResponse);
-        }
+    public List<RankingResponse> getMonthlyRanking() {
+        AtomicInteger rank = new AtomicInteger(1);
+        return userRepository.findAll().stream()
+                .sorted(Comparator.<User, Integer>comparing(
+                        user -> user.getRanking().getMonthlyRanking()).reversed())
+                .map(user -> new RankingResponse(
+                        user,
+                        user.getRanking().getMonthlyRanking(),
+                        rank.getAndIncrement()))
+                .limit(50)
+                .toList();
+    }
+
+    public List<RankingResponse> getYearlyRanking() {
+        AtomicInteger rank = new AtomicInteger(1);
+        return userRepository.findAll().stream()
+                .sorted(Comparator.<User, Integer>comparing(
+                        user -> user.getRanking().getYearlyRanking()).reversed())
+                .map(user -> new RankingResponse(
+                        user,
+                        user.getRanking().getYearlyRanking(),
+                        rank.getAndIncrement()))
+                .limit(50)
+                .toList();
+    }
 
 
-        response.sort(Comparator.comparingInt(RankingResponse::getRanking).reversed());
-
-
-        return  response.stream().limit(50).collect(Collectors.toList());
-
+    public List<RankingResponse> getAllTimeRanking() {
+        AtomicInteger rank = new AtomicInteger(1);
+        return userRepository.findAll().stream()
+                .sorted(Comparator.<User, Integer>comparing(
+                        user -> user.getRanking().getAllTimeRanking()).reversed())
+                .map(user -> new RankingResponse(
+                        user,
+                        user.getRanking().getAllTimeRanking(),
+                        rank.getAndIncrement()))
+                .limit(50)
+                .toList();
     }
 }
